add test lemmings background

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -24,6 +24,9 @@ en:
     me: "Jimmy Charrier"
     title: "%{man}'s Career portfolio"
     dev: "Web Developer"
+  warning:
+    progress: "Work in progress"
+    svg: "Sorry, your browser does not support inline SVG."
 
 
 
